--- a/www/index.html
+++ b/www/index.html
@@ -17,9 +17,10 @@
 				<div id="startmess">
 					<p id="mess">Cмотрим как все работает.</p>
 					<ul>
-						<li>F - ЗАФИКСИРОВАТЬ КАМЕРУ</li>
-						<li>Поворот - движение мышью</li>
-						<li>Двигаться-ЛКМ\ПКМ</li>
+						<li>Поворот - ДВИЖЕНИЕ МЫШЬЮ</li>
+						<li>Двигаться - КЛАВИША ВПЕРЕД</li>
+						<li>Выстрел - ЛКМ</li>	
+						<li>Зафиксировать камеру - F</li>						
 					</ul>
 					<div id="startbutton">&#9760;</div>
 				</div>
