add regen after die

--- a/www/index.html
+++ b/www/index.html
@@ -30,11 +30,27 @@
 	</div>
 	
 	<div id="gameScreen">
-		<div id="debugDiv"></div>	
+		<!--<div id="debugDiv"></div>-->	
+		<div id="restartButt">Regen</div> 
+		<div id="infoKills"></div>		
+		<div id="infoDies"></div> 
+		<div id="infoBullets"></div> 				
 		<canvas id="canvas"></canvas>
 	</div>	
-	<!--shaders-->
-	<script id="vertexShader" type="x-shader/x-vertex">
+	
+	<!-- javascript libraries -->    
+	<script src="jsLibs/jquery.js"></script> 
+	<script src="jsLibs/socket.io.js"></script> 	
+	<script src="jsLibs/three.js"></script>
+	<script src="jsLibs/FirstPersonControls.js"></script>	
+	<script src="jsLibs/OBJLoader.js"></script>		
+	<!-- javascript --> 
+	<script src="js/3dscene.js"></script>  	
+	<script src="js/client.js"></script>
+
+<!-- bot vertex shader -->
+<script id="vertexShader" type="x-shader/x-vertex">
+	
 uniform sampler2D noiseTexture;
 
 uniform sampler2D bumpTexture;
@@ -46,43 +62,21 @@ uniform float time;
 varying vec2 vUv;
 varying vec3 newPosition;
 
-void main() 
-{ 
+void main() { 
     vUv = uv;
 	
-	//vec2 uvTimeShift = vUv + vec2( 1.1, 1.9 ) * time * bumpSpeed;
-	//vec4 noiseGeneratorTimeShift = texture2D( noiseTexture, uvTimeShift );
-	//vec2 uvNoiseTimeShift = vUv + noiseScale * vec2( noiseGeneratorTimeShift.r, noiseGeneratorTimeShift.g );
-	//* below, using uvTimeShift seems to result in more of a "rippling" effect
-	//*   while uvNoiseTimeShift seems to result in more of a "shivering" effect
-	//**vec4 bumpData = texture2D( bumpTexture, uvTimeShift );**//
-	
 	vec2 uvTimeShift = vUv + vec2( time * bumpSpeed , 1.0); 
-	vec4 bumpData = texture2D( bumpTexture, uvTimeShift );
-	
-	//* move the position along the normal
-	//*  but displace the vertices at the poles by the same amount
-	//float displacement = ( vUv.y > 0.999 || vUv.y < 0.001 ) ? 
-	//	bumpScale * (0.3 + 0.02 * sin(time)) :  
-	//	bumpScale * bumpData.r;
-    //vec3 newPosition = position + normal * displacement;
-	
-
+	vec4 bumpData = texture2D( bumpTexture, uvTimeShift );	
 	float displacement = (bumpScale * bumpData.r);	
-	
-	/**float displacement = ( vUv.y > 0.7|| vUv.y < 0.3 ) ? 
-		bumpScale * (0.3 + 0.02 * sin(time)) :  
-		bumpScale * bumpData.r;*/
-	
-	/**float displacement = bumpScale * (0.8-abs(sin(time)));**/
 	vec3 newPosition = position + normal* displacement;	
 	
 	gl_Position = projectionMatrix * modelViewMatrix * vec4( newPosition, 1.0 );
 }
 </script>
 
-<!-- fragment shader -->
+<!-- bot fragment shader -->
 <script id="fragmentShader" type="x-shader/x-vertex"> 
+
 varying vec2 vUv;
 varying vec3 newPosition;
 
@@ -92,27 +86,15 @@ uniform float bumpSpeed;
 uniform sampler2D baseTexture;
 uniform float time;
 
-void main() 
-{
-
+void main() {
 	vec2 uvTimeShift = vUv + vec2( time * bumpSpeed , 1.0); 
 	vec4 bumpData = texture2D( bumpTexture, uvTimeShift );
-
 	vec4 baseColor = texture2D( baseTexture, vUv);	
-	/** vec4 color = baseColor * vec4( 0.7+(abs(sin(time)*0.2)*vUv.x), 1.0, 0.7+abs(sin(time)*0.2*vUv.x), 1); */
 	vec4 color = baseColor * vec4( 0.72 + bumpData.r*0.3, 0.75 + bumpData.g*0.6, 0.65 + bumpData.b*0.3, 1.0);	
+	
 	gl_FragColor = color;
 }
 </script>
-	<!--/shaders -->	
-	<!-- javascript libraries -->    
-	<script src="jsLibs/jquery.js"></script> 
-	<script src="jsLibs/socket.io.js"></script> 	
-	<script src="jsLibs/three.js"></script>
-	<script src="jsLibs/FirstPersonControls.js"></script>	
-	<script src="jsLibs/OBJLoader.js"></script>		
-	<!-- javascript --> 
-	<script src="js/3dscene.js"></script>  	
-	<script src="js/client.js"></script>	
+	
 </body>
 </html>
