add start LOADER

--- a/www/index.html
+++ b/www/index.html
@@ -15,22 +15,23 @@
 				<p id="name">Shooter</p>
 				<p id="slogan"><i>online</i></p>
 				<div id="startmess">
-					<p id="mess">Cмотрим как все работает.</p>
+					<p id="mess">Small online shooter. Kill enemies for frags, and kill bots to take bullets. To kill yourself: open shooter in new browser tab. </p>
 					<ul>
-						<li>Поворот - ДВИЖЕНИЕ МЫШЬЮ</li>
-						<li>Двигаться - КЛАВИША ВПЕРЕД</li>
-						<li>Выстрел - ЛКМ</li>	
-						<li>Зафиксировать камеру - F</li>						
+						<li>Rotation - MOVE MOUSE</li>
+						<li>Move forward - KEY "UP"</li>
+						<li>Fire - LEFT MOUSE CLICK</li>	
+						<li>Fix rotation - KEY "F"</li>						
 					</ul>
+					<div id="loadMess">Loading:</div>
+					<div id="loadBar"></div>					
 					<div id="startbutton">&#9760;</div>
 				</div>
 			</div>
 		</div>
-		<div id="copyRight">&#169; <a href="http://otrisovano.ru/" target="_blank">www.otrisovano.ru</a></div>		
+		<div id="copyRight"><a href="https://github.com/fire888/shooter" target="_blank" >source code</a><br/><a href="http://otrisovano.ru/" target="_blank">  &#169; www.otrisovano.ru</a></div>		
 	</div>
 	
-	<div id="gameScreen">
-		<!--<div id="debugDiv"></div>-->	
+	<div id="gameScreen">	
 		<div id="restartButt">Regen</div> 
 		<div id="infoKills"></div>		
 		<div id="infoDies"></div> 
