add restart new points

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 				<p id="name">Shooter</p>
 				<p id="slogan"><i>online</i></p>
 				<div id="startmess">
-					<p id="mess">Small online shooter. Kill enemies for frags, and kill bots to take bullets. To kill yourself: open shooter in new browser tab. </p>
+					<p id="mess">Small online shooter. Kill enemies for frags, and kill bots to take bullets. To kill yourself open shooter in new browser tab. </p>
 					<ul>
 						<li>Rotation - MOVE MOUSE</li>
 						<li>Move forward - KEY "UP"</li>
